# env_var

./: .env.json  .gitignore  Cargo.toml  README.md
src/: lib.rs  tests.rs
