[package]
name = "env_var"
description="A library to retrieve environment variables from different file types."
license="MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
serde = "1.0.195"
serde_json = "1.0"
